Update to Kotlin 2.0.